# sovereign-namespace-protocol

./: .env.example  .gitignore  BLOCKCHAIN_REGISTRY_SOLUTION.md  BRAD_CLAIM_INSTRUCTIONS.md  BRAD_DON_SOVEREIGNTY_GRANT.md  BRAD_IPFS_POSTMORTEM.md  BRAD_ONBOARDING_WHATS_NEXT.md  BRAND_NAMESPACE_GUIDE.md  BUYER_VERIFICATION_GUIDE.md  CALENDAR_POLICY_SPEC.md  CEREMONIAL_CLAIMING_COMPLETE.md  CEREMONIAL_COMPLIANCE_AUDIT.md  CEREMONY_IMPLEMENTATION.md  CLAIM_TOKEN_VERIFICATION.md  CLOUDFLARE_CLAIMING_DEPLOYMENT.md  CLOUDFLARE_DEPLOYMENT.md  CLOUDFLARE_IPFS_SOLUTION.md  CODESPACE_TROUBLESHOOTING.md  COMPANION_QUICKSTART.md  CONTACTS_RELATIONSHIPS_SPEC.md  CRITICAL_AUDIT_CLAIMS_SYSTEM.md  CRITICAL_AUDIT_REPORT_JAN_2026.md  CROWN_DELEGATION_POLICY.md  CROWN_INFRASTRUCTURE_SUMMARY.md  CROWN_SOVEREIGNTY_STRATEGY.md  Cargo.toml  DASHBOARD_INTEGRATION_EXAMPLE.tsx  DEPLOY_NOW.md  EMERGENCY_PINATA_UPLOAD.md  FAMILY_DELEGATION_GUIDE.md  FAMILY_DELEGATION_SPEC.md  FF_ISSUANCE_READY.md  FF_LAUNCH_CHECKLIST.md  FF_QUICKSTART.md  FINAL_STATUS_READY_TO_LAUNCH.md  FRIENDS_FAMILY_OS_GUIDE.md  FRIENDS_FAMILY_PROGRAM.md  FRIENDS_FAMILY_QUICKSTART.md  GAME_TIME_CHECKLIST.md  GENESIS_EVENT_STATUS.md  (+100 more)
kevan-auth/: Cargo.toml  README.md
kevan-auth/examples/: demo_with_events.rs
kevan-auth/src/: challenge.rs  lib.rs  main.rs  session.rs  verifier.rs
kevan-events/: Cargo.toml  README.md
kevan-events/examples/: query_events.rs
kevan-events/src/: event.rs  hash.rs  lib.rs  store.rs
kevan-finance/: Cargo.toml
kevan-finance/examples/: finance_demo.rs
kevan-finance/src/: README.md  hub.rs  lib.rs  payment.rs  route.rs
kevan-mail/: Cargo.toml
kevan-mail/src/: hub.rs  lib.rs  message.rs
kevan-os/: Cargo.toml
kevan-os/src/: companion.rs  main.rs
kevan-resolver/: .env.example  Cargo.toml  README.md
kevan-resolver/examples/: test_resolution.rs
kevan-resolver/src/: certificate.rs  lib.rs  main.rs  resolver.rs
kevan-tel/: CHECK-IPHONE.ps1  COMPLETE-AUTO-SETUP.ps1  COMPLETE-DIAGNOSIS.md  Cargo.toml  DEPLOYMENT_SUCCESS.md  FIX-ESIM.ps1  HARD-RESET.ps1  IPHONE-STATUS-AND-FIX.md  IPHONE_SETUP.md  LIVE-TEST-PLAN.md  LIVE_DEPLOYMENT.md  MINIMAL_TEST.md  OPTION-A-COMPLETE.md  PHASE_6_COMPLETE.md  PORTAL-STEPS-EXACT.md  PRODUCTION_INTEGRATION.md  QUICK-VISUAL.md  QUICK_START_TEST.md  README.md  READY_TO_TEST.md  SETUP-COMPLETE.md  SETUP_STEPS.md  START_HERE.md  TELNYX_CONFIGURATION.md  WEBHOOK_DEPLOYMENT.md  configure-unblocked-esim.ps1  diagnose-esim.ps1  esim-status.txt  monitor-webhooks.ps1  number-status.txt  phone-registry.json  restart-webhook-server.ps1  server.err  start-tunnel.ps1  start-webhook-server.ps1  test-webhook-server.ps1  verify-complete-setup.ps1  verify-ready.ps1  webhook_test.json
kevan-tel/devices/: unykorn-iphone.json
kevan-tel/examples/: tel_demo.rs
kevan-tel/src/: auth.rs  hub.rs  lib.rs  numbers.rs  server.rs  telnyx_api.rs  webhook.rs
kevan-vault/: Cargo.toml
kevan-vault/src/: file.rs  hub.rs  lib.rs
ops/ledger/: Cargo.toml
payments-api/: .env.example  ARCHITECTURE.md  Cargo.toml  FF-CODES-2026-01-16.txt  FRIENDS_FAMILY_CODES.txt  IMPLEMENTATION_STATUS.md  LAUNCH_READY.md  README.md  STRIPE_TEST_EXECUTION.md  add-schema-columns.py  affiliates.sample.csv  check-namespaces.py  cloudflared.example.yml  create-affiliates.ps1  execute-genesis-sql.ps1  export_ff_codes.py  ff-recipients.txt  generate-broker-invites.ps1  generate-population-sql.ps1  generate_ff_codes.py  genesis-population.sql  install-sqlite-and-populate.ps1  launch-ff.ps1  lock-crown-infrastructure.py  lock-sovereign-roots.py  lock-sovereign-roots.sql  monitor-first-hour.ps1  package-lock.json  package.json  populate-genesis-db.ps1  railway.toml  restart-payments-api.ps1  run-payments-api.cmd  run-tunnel.ps1  send-ff-emails.ps1  start-api-production.ps1  verify-crown-lock.py  verify-launch-ready.ps1  verify-population.txt  verify-public-api.ps1
payments-api/ff-emails-ready/: 1-FOUNDER-GENESIS-F001-2026.txt  10-FOUNDER-GENESIS-F010-2026.txt  100-EARLY-GENESIS-E100-2026.txt  11-EARLY-GENESIS-E011-2026.txt  12-EARLY-GENESIS-E012-2026.txt  13-EARLY-GENESIS-E013-2026.txt  14-EARLY-GENESIS-E014-2026.txt  15-EARLY-GENESIS-E015-2026.txt  16-EARLY-GENESIS-E016-2026.txt  17-EARLY-GENESIS-E017-2026.txt  18-EARLY-GENESIS-E018-2026.txt  19-EARLY-GENESIS-E019-2026.txt  2-FOUNDER-GENESIS-F002-2026.txt  20-EARLY-GENESIS-E020-2026.txt  21-EARLY-GENESIS-E021-2026.txt  22-EARLY-GENESIS-E022-2026.txt  23-EARLY-GENESIS-E023-2026.txt  24-EARLY-GENESIS-E024-2026.txt  25-EARLY-GENESIS-E025-2026.txt  26-EARLY-GENESIS-E026-2026.txt  27-EARLY-GENESIS-E027-2026.txt  28-EARLY-GENESIS-E028-2026.txt  29-EARLY-GENESIS-E029-2026.txt  3-FOUNDER-GENESIS-F003-2026.txt  30-EARLY-GENESIS-E030-2026.txt  31-EARLY-GENESIS-E031-2026.txt  32-EARLY-GENESIS-E032-2026.txt  33-EARLY-GENESIS-E033-2026.txt  34-EARLY-GENESIS-E034-2026.txt  35-EARLY-GENESIS-E035-2026.txt  36-EARLY-GENESIS-E036-2026.txt  37-EARLY-GENESIS-E037-2026.txt  38-EARLY-GENESIS-E038-2026.txt  39-EARLY-GENESIS-E039-2026.txt  4-FOUNDER-GENESIS-F004-2026.txt  40-EARLY-GENESIS-E040-2026.txt  41-EARLY-GENESIS-E041-2026.txt  42-EARLY-GENESIS-E042-2026.txt  43-EARLY-GENESIS-E043-2026.txt  44-EARLY-GENESIS-E044-2026.txt  (+60 more)
payments-api/migrations/: 001_initial_schema.sql  002_inventory_management.sql  003_safety_layer.sql  004_practice_mode.sql  005_affiliates.sql  006_agent_provisioning.sql  007_nil_labels.sql  008_genesis_inventory.sql
payments-api/src/: api-server.js  database.rs  db.js  errors.rs  friends_family.rs  genesis.rs  handlers.rs  index.js  init-db.js  inventory.rs  issuance.rs  lib.rs  main.rs  minter.js  monitor.js  practice.rs  practice_handlers.rs  pricing.js  rate_limit.rs  refund_service.rs  retry_worker.rs  signing.rs  stripe_service.rs  types.rs  (+1 more)
snp-cli/: Cargo.toml  README.md  generate-crown-certificates.ps1  generate-sovereign-subnamespaces.ps1
snp-core/: Cargo.toml  README.md
snp-genesis-cli/: Cargo.toml  README.md
snp-verifier/: Cargo.toml  README.md
uny-korn-l1/: AUDIT_REPORT.md  Cargo.toml  README.md  audit.sample.json  verify-indexer.ps1
(+1535 files in other folders)
