[workspace]
members = [
    "payments-api",
    "snp-core",
    "snp-verifier",
    "snp-cli",
    "kevan-resolver",
    "kevan-auth",
    "kevan-events",
    "kevan-policy",
    "kevan-finance",
    "kevan-tel",
    "kevan-mail",
    "kevan-vault",
    "kevan-os",
    "kevan-contacts",
    "kevan-calendar",
    "uny-korn-l1/registry-api",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Web3 Rarity Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web framework
actix-web = "4.4"
actix-rt = "2.9"

# Cryptography
sha3 = "0.10"
blake3 = "1.5"
ed25519-dalek = "2.1"
rand = "0.8"
hex = "0.4"

# IPFS
ipfs-api-backend-hyper = "0.6"
cid = "0.11"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }

# Web3
ethers = "2.0"
web3 = "0.19"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time
chrono = "0.4"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }
