[package]
name = "kevan-auth"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kevan-auth"
path = "src/main.rs"

[lib]
name = "kevan_auth"
path = "src/lib.rs"

[dependencies]
# Certificate resolution (local workspace)
kevan-resolver = { path = "../kevan-resolver" }
kevan-events = { path = "../kevan-events" }

# Crypto
ed25519-dalek = "2.1"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Database (use older version compatible with sqlx)
rusqlite = { version = "0.29", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8"
