[package]
name = "kevan-events"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
rusqlite = { version = "0.29", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.8"
