[package]
name = "kevan-finance"
version = "0.1.0"
edition = "2021"

[dependencies]
kevan-events = { path = "../kevan-events" }
kevan-policy = { path = "../kevan-policy" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"
