[package]
name = "kevan-mail"
version = "0.1.0"
edition = "2021"

[dependencies]
kevan-events = { path = "../kevan-events" }
kevan-policy = { path = "../kevan-policy" }
kevan-resolver = { path = "../kevan-resolver" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
