[package]
name = "kevan-os"
version = "0.1.0"
edition = "2021"

[dependencies]
kevan-events = { path = "../kevan-events" }
kevan-tel = { path = "../kevan-tel" }
kevan-finance = { path = "../kevan-finance" }
kevan-mail = { path = "../kevan-mail" }
kevan-vault = { path = "../kevan-vault" }
kevan-resolver = { path = "../kevan-resolver" }
kevan-policy = { path = "../kevan-policy" }
kevan-contacts = { path = "../kevan-contacts" }
kevan-calendar = { path = "../kevan-calendar" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
actix-web = "4"
