[package]
name = "kevan-tel"
version = "0.1.0"
edition = "2021"

[dependencies]
kevan-events = { path = "../kevan-events" }
kevan-policy = { path = "../kevan-policy" }
kevan-resolver = { path = "../kevan-resolver" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tiny_http = "0.12"

[[bin]]
name = "webhook-server"
path = "src/bin/webhook-server.rs"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
