[package]
name = "payments-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Stripe SDK (async-stripe is the maintained fork)
async-stripe = { version = "0.39", features = ["runtime-tokio-hyper"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Cryptography (for webhook verification)
hmac = "0.12"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Database (SQLite for now, PostgreSQL later)
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid", "macros", "migrate"] }

# Environment variables
dotenv = "0.15"

# Signing + encoding (certificate + funding proofs)
base64 = "0.22"
ed25519-dalek = { workspace = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI (for admin tools)
clap = { version = "4.5", features = ["derive"] }



[[bin]]
name = "payments-api"
path = "src/main.rs"

[[bin]]
name = "admin"
path = "src/bin/admin.rs"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockito = "1.2"
