[package]
name = "snp-cli"
version = "1.0.0"
edition = "2021"
authors = ["Y3K Digital"]
description = "Sovereign Namespace Protocol - Command Line Interface"
license = "MIT"

[[bin]]
name = "snp"
path = "src/main.rs"

[dependencies]
snp-core = { path = "../snp-core" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
colored = "2.1"
