[package]
name = "snp-core"
version = "1.0.0"
edition = "2021"
authors = ["Y3K Digital"]
description = "Sovereign Namespace Protocol - Core Library (Genesis-bound, Post-quantum)"
license = "MIT"

[dependencies]
sha3 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

[dev-dependencies]
anyhow = "1.0"
rand = "0.8"
