[package]
name = "snp-genesis-cli"
version = "1.0.0"
edition = "2021"
description = "Genesis ceremony tooling for Sovereign Namespace Protocol (SNP) v1.0"
authors = ["SNP Contributors"]
license = "MIT"

[dependencies]
# SHA3-256 (spec-required)
sha3 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hex encoding
hex = "0.4"

# HTTP client for fetching blockchain data
reqwest = { version = "0.11", features = ["blocking", "json"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = "0.4"

# UUID generation
uuid = { version = "1.11", features = ["v4"] }

# Cryptographic operations
ed25519-dalek = { version = "2.0", features = ["rand_core"] }

# Local workspace dependencies
namespace-core = { path = "../namespace-core" }
rarity-engine = { path = "../rarity-engine" }
certificate-gen = { path = "../certificate-gen" }

[[bin]]
name = "snp-genesis"
path = "src/main.rs"
