[package]
name = "blockchain-registry-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
env_logger = "0.11"
log = "0.4"

# Your local crates
uny-korn-state = { path = "../crates/state" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
