[package]
name = "uny-korn-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uny-korn-state = { path = "../state" }
uny-korn-governance = { path = "../governance" }
uny-korn-tev = { path = "../tev" }
uny-korn-execution = { path = "../execution" }
uny-korn-audit = { path = "../audit" }
